# dist-GPU-accelerated-tree-search

./: ACKNOWLEDGEMENTS.md  CONTRIBUTORS.md  LICENSE  README.md
baselines/pfsp/: makefile  pfsp_dist_gpu_cuda.c  pfsp_dist_multigpu_cuda.c  pfsp_gpu_cuda.c  pfsp_multigpu_cuda.c
baselines/pfsp/lib/: Auxiliary.c  Auxiliary.h  Pool.c  Pool_ext.c  Pool_ext.h  c_bounds_gpu.cu  evaluate.cu  evaluate.h
common/: get_numa_affinity.py  gpu_util.c  gpu_util.cu  gpu_util.cuh  gpu_util.h  numa_affinity.py  util.c  util.h
config/: g5k-module-load.sh  lumi-module-load.sh
pfsp/: CMakeLists.txt  README.md  makefile  pfsp_c.c  pfsp_dist_multigpu_cuda.c  pfsp_gpu_cuda.c  pfsp_mpigpu_cuda.c  pfsp_multigpu_cuda.c  pfsp_omp_c.c  pfsp_omp_dist_multigpu_cuda.c  pfsp_omp_gpu_cuda.c  pfsp_omp_multigpu_cuda.c
pfsp/data/: .~lock.multigpu.csv#  dist-multigpu-DWS.py  dist-multigpu-comparison.py  dist-multigpu-speedup-boxplot.py  multigpu-boxplot.py  multigpu-speedup.py  multigpu-stats-analysis.py  single-GPU.py  singlegpu.py
pfsp/launch_scripts/: dmgpu_launch.sh  mgpu_launch.sh  sgpu_launch.sh
pfsp/lib/: Auxiliary.c  Auxiliary.h  PFSP_gpu_lib.cu  PFSP_gpu_lib.cuh  PFSP_lib.c  PFSP_lib.h  PFSP_node.c  PFSP_node.h  PFSP_statistic.c  PFSP_statistic.h  Pool.c  Pool.h  Pool_atom.c  Pool_atom.h  bounds_gpu.cu  c_taillard.c  evaluate.cu  evaluate.h  macro.h
